--- a/myapp/src/app/app.component.html
+++ b/myapp/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-header></app-header>
-<h2>hola mundo!</h2>
-<app-footer></app-footer>
+<!-- <div [style]="styles">
+    <app-btn></app-btn>
+    <app-link></app-link>
+</div> -->
+<app-user-card></app-user-card>
