Añadido Data Binding

--- a/myapp/src/app/app.component.html
+++ b/myapp/src/app/app.component.html
@@ -2,4 +2,4 @@
     <app-btn></app-btn>
     <app-link></app-link>
 </div> -->
-<app-user-card></app-user-card>
+<app-product-card></app-product-card>
