Añadido comportamientos de Pipe

--- a/myapp/src/app/product-card/product-card.component.html
+++ b/myapp/src/app/product-card/product-card.component.html
@@ -10,8 +10,10 @@
         />
     </div>
     <div class="product--info">
-        <h1 class="product--info__title">{{product.name}}</h1>
+        <h1 class="product--info__title">{{product.name | uppercase}}</h1>
+        <h3>{{product.date | date:'longDate'}}</h3>
         <p class="product--info__description">{{product.description}}</p>
+        <div class="product--info__price"><h1>{{product.price | number | currency}}</h1></div>
     </div>
     <div class="product--actions">
         <button (click)="buyProduct()" [disabled]="!(product.unitAvailable > 1)" class="product--actions__btn buy">BUY</button>
