--- a/myapp/src/app/header/header.component.html
+++ b/myapp/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<app-title 
-    [title]="pageTitle"
-    (dataFromChild)="onDataCheck($event)"
-></app-title>
+<header>
+    <app-title [title]="pageTitle" (dataFromChild)="onDataCheck($event)"></app-title>
+    <app-avatar [userInfo]="userInfo"></app-avatar>
+</header>
