--- a/myapp/src/app/app.component.html
+++ b/myapp/src/app/app.component.html
@@ -1,20 +1,3 @@
-<!-- <div [style]="styles">
-    <app-btn></app-btn>
-    <app-link></app-link>
-</div> -->
 <app-header></app-header>
-<ng-container *ngIf="products.length > 0; else noProducts">
-<div class="title"><h1>Últimos productos</h1></div>
-<div class="products">
-    <ng-container *ngFor="let product of products">
-        <ng-container *ngIf="product.unitAvailable > 0">
-            <div class="product">
-                <div class="container"><app-product-card [product]="product"></app-product-card></div>
-            </div>
-        </ng-container>
-    </ng-container>
-</div>
-</ng-container>
-<ng-template #noProducts>
-    <div class="title"><h1>No hay productos disponibles</h1></div>
-</ng-template>
+<app-products></app-products>
+<!-- <app-about-us></app-about-us> -->
