Cambios leves en el componente hijo

--- a/comunicacionEntreComponentes/src/app/app.component.html
+++ b/comunicacionEntreComponentes/src/app/app.component.html
@@ -14,8 +14,7 @@
 
     <section class="p-5 mb-4 bg-light rounded-3">
       <div class="container-fluid py-5">
-        <img src="https://www.freepnglogos.com/uploads/hogwarts-logo-png/hogwarts-logo-shadopro-deviantart-0.png" alt=""
-          height="200">
+        <img src="https://www.freepnglogos.com/uploads/hogwarts-logo-png/hogwarts-logo-shadopro-deviantart-0.png" alt="" height="200">
         <h1 class="display-5 fw-bold">Hogwarts</h1>
         <p class="col-md-8 fs-4">Este es el componente padre</p>
 
